[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pwneye"
version = "1.0.1"
description = "Offensive security tool for working with ONVIF and RTSP-enabled IP cameras."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "GPL-3.0-only"
authors = [
  { name = "Michele Cisternino" },
]
maintainers = [
  { name = "Michele Cisternino" },
]
dependencies = [
  "attrs==25.4.0",
  "certifi==2025.11.12",
  "charset-normalizer==3.4.4",
  "idna==3.11",
  "isodate==0.7.2",
  "lxml==6.0.2",
  "markdown-it-py==4.0.0",
  "mdurl==0.1.2",
  "onvif-python==0.2.9",
  "ping3==5.1.5",
  "platformdirs==4.5.1",
  "Pygments==2.19.2",
  "pytz==2025.2",
  "PyYAML==6.0.3",
  "requests==2.32.5",
  "requests-file==3.0.1",
  "requests-toolbelt==1.0.0",
  "rich==14.2.0",
  "rich-argparse==1.7.2",
  "urllib3==2.6.2",
  "zeep==4.3.2",
]
keywords = ["onvif", "rtsp", "security", "cameras", "pentest"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/Hackerest/pwneye"
Repository = "https://github.com/Hackerest/pwneye"
Issues = "https://github.com/Hackerest/pwneye/issues"

[project.scripts]
pwneye = "pwneye.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pwneye*"]

[tool.setuptools.package-data]
pwneye = ["data/*.yaml"]
